added user address api's in swagger file
