# swagger.yml
@@ -269,7 +269,63 @@ paths:
               schema:
                 $ref: "#/components/schemas/ResponseFormat"
               
-
+  #users
+  /users:
+    get:
+      summary: GET All Users
+      tags:
+        - Dashboard
+      security:
+        - ApiJWTAuth: []
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+  /user/{id}:
+    get:
+      summary: Get User by id
+      tags:
+        - Dashboard
+      security:
+        - ApiJWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+    put:
+      summary: Update User by id
+      tags:
+        - Dashboard
+      security:
+        - ApiJWTAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Products"
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
   # upload
   /upload-image:
     post:
@@ -341,11 +397,192 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ResponseFormat"
+ # Accounts
+  /store/login:
+    post:
+      summary: Login
+      tags:
+        - Store
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+  /store/signup:
+    post:
+      summary: Login
+      tags:
+        - Store
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+                - password
+                - first_name
+                - last_name
+                - phone
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                phone:
+                  type: string
+                first_name:
+                  type: string
+                last_name:
+                  type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+  #user-address
+  /store/user-address:
+    get:
+      summary: Get All User Addresses
+      tags:
+        - Store
+      security:
+        - ApiJWTUserAuth: []
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+    post:
+      summary: Add User Address
+      tags:
+        - Store
+      security:
+        - ApiJWTUserAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - user_id
+              properties:
+                user_id:
+                  description: String or object
+                home_phone:
+                  type: string
+                created_date:
+                  type: string
+                  format: date
+                office_phone:
+                  type: string
+                address:
+                  type: string
+                address2:
+                  type: string
+                city:
+                  type: string
+                state:
+                  type: string
+                country:
+                  type: string
+                role_id:
+                  description: String or object
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+  /store/user-address/{id}:
+    get:
+      summary: Get User address by id
+      tags:
+        - Store
+      security:
+        - ApiJWTUserAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+    put:
+      summary: Update User address by id
+      tags:
+        - Store
+      security:
+        - ApiJWTUserAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Product-type"
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
+    delete:
+      summary: delete User address by id
+      tags:
+        - Store
+      security:
+        - ApiJWTUserAuth: []
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResponseFormat"
 components:
   securitySchemes:
     ApiJWTAuth:
       type: "apiKey"
       name: "fireswag-jwt-auth"
+      in: "header"
+    ApiJWTUserAuth:
+      type: "apiKey"
+      name: "fireswag-jwt-user-auth"
       in: "header"
 
   responses:
@@ -549,5 +786,3 @@ components:
           type: string
         country:
           type: string
-        role_id:
-          description: String or object
